Atribuindo texto alternativo as imagens das logos no rodapé das páginas

--- a/execucao.html
+++ b/execucao.html
@@ -297,25 +297,25 @@
         </div>
         <hr style="margin: 2rem 0" />
         <footer class="owl-carousel bg-gray-400">
-          <img src="images/logos/logo-1.webp" />
-          <img src="images/logos/logo-2.png" />
-          <img src="images/logos/logo-3.png" />
-          <img src="images/logos/logo-4.png" />
-          <img src="images/logos/logo-5.webp" />
-          <img src="images/logos/logo-6.png" />
-          <img src="images/logos/logo-7.jpg" />
-          <img src="images/logos/logo-8.png" />
-          <img src="images/logos/logo-9.jpg" />
-          <img src="images/logos/logo-10.png" />
-          <img src="images/logos/logo-11.png" />
-          <img src="images/logos/logo-12.jpg" />
-          <img src="images/logos/logo-13.jpeg" />
-          <img src="images/logos/logo-14.jpg" />
-          <img src="images/logos/logo-15.png" />
-          <img src="images/logos/logo-16.png" />
-          <img src="images/logos/logo-17.jpg" />
-          <img src="images/logos/logo-18.png" />
-          <img src="images/logos/logo-19.jpg" />
+          <img src="images/logos/logo-1.webp" alt="Votorantim Cimentos" />
+          <img src="images/logos/logo-2.png" alt="Unical" />
+          <img src="images/logos/logo-3.png" alt="TMF" />
+          <img src="images/logos/logo-4.png" alt="Unimed" />
+          <img src="images/logos/logo-5.webp" alt="Vale D'ouro" />
+          <img src="images/logos/logo-6.png" alt="Amep" />
+          <img src="images/logos/logo-7.jpg" alt="Cal Oeste Ltda." />
+          <img src="images/logos/logo-8.png" alt="Dolocal" />
+          <img src="images/logos/logo-9.jpg" alt="Carmeuse" />
+          <img src="images/logos/logo-10.png" alt="Cemig" />
+          <img src="images/logos/logo-11.png" alt="Granja Brasília" />
+          <img src="images/logos/logo-12.jpg" alt="Engelmig" />
+          <img src="images/logos/logo-13.jpeg" alt="Lapa Vermelha" />
+          <img src="images/logos/logo-14.jpg" alt="Pharlab" />
+          <img src="images/logos/logo-15.png" alt="Prumo" />
+          <img src="images/logos/logo-16.png" alt="Roca" />
+          <img src="images/logos/logo-17.jpg" alt="Rodonaves" />
+          <img src="images/logos/logo-18.png" alt="Raízen" />
+          <img src="images/logos/logo-19.jpg" alt="Sicoob" />
         </footer>
       </div>
     </section>
