--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
             style="--overlay-color: #14a6df"
           >
             <div class="image-wrapper">
-              <img src="images/home/loja/img-1.webp" />
+              <img
+                src="images/home/loja/img-1.webp"
+                alt="Visitar site de Loja Virtual"
+              />
             </div>
             <h2 class="title">Loja Virtual</h2>
             <h3 class="subtitle">Visitar</h3>
@@ -98,7 +101,10 @@
           >
             <a href="engenharia.html">
               <div class="image-wrapper">
-                <img src="images/home/engenharia/img-1.webp" />
+                <img
+                  src="images/home/engenharia/img-1.webp"
+                  alt="Visitar site de engenharia"
+                />
               </div>
             </a>
             <h2 class="title">Engenharia</h2>
@@ -116,7 +122,10 @@
           >
             <a href="execucao.html">
               <div class="image-wrapper">
-                <img src="images/home/execucao/img-1.webp" />
+                <img
+                  src="images/home/execucao/img-1.webp"
+                  alt="Visitar site de execução"
+                />
               </div>
             </a>
             <h2 class="title">Execução</h2>
@@ -131,7 +140,10 @@
             style="--overlay-color: #ed1d23"
           >
             <div class="image-wrapper">
-              <img src="images/home/recarga/img-1.webp" />
+              <img
+                src="images/home/recarga/img-1.webp"
+                alt="Visitar site de Recarga"
+              />
             </div>
             <h2 class="title">Recarga</h2>
             <h3 class="subtitle">Visitar</h3>
@@ -140,25 +152,25 @@
       </main>
     </section>
     <footer class="owl-carousel">
-      <img src="images/logos/logo-1.webp" />
-      <img src="images/logos/logo-2.png" />
-      <img src="images/logos/logo-3.png" />
-      <img src="images/logos/logo-4.png" />
-      <img src="images/logos/logo-5.webp" />
-      <img src="images/logos/logo-6.png" />
-      <img src="images/logos/logo-7.jpg" />
-      <img src="images/logos/logo-8.png" />
-      <img src="images/logos/logo-9.jpg" />
-      <img src="images/logos/logo-10.png" />
-      <img src="images/logos/logo-11.png" />
-      <img src="images/logos/logo-12.jpg" />
-      <img src="images/logos/logo-13.jpeg" />
-      <img src="images/logos/logo-14.jpg" />
-      <img src="images/logos/logo-15.png" />
-      <img src="images/logos/logo-16.png" />
-      <img src="images/logos/logo-17.jpg" />
-      <img src="images/logos/logo-18.png" />
-      <img src="images/logos/logo-19.jpg" />
+      <img src="images/logos/logo-1.webp" alt="Votorantim Cimentos" />
+      <img src="images/logos/logo-2.png" alt="Unical" />
+      <img src="images/logos/logo-3.png" alt="TMF" />
+      <img src="images/logos/logo-4.png" alt="Unimed" />
+      <img src="images/logos/logo-5.webp" alt="Vale D'ouro" />
+      <img src="images/logos/logo-6.png" alt="Amep" />
+      <img src="images/logos/logo-7.jpg" alt="Cal Oeste Ltda." />
+      <img src="images/logos/logo-8.png" alt="Dolocal" />
+      <img src="images/logos/logo-9.jpg" alt="Carmeuse" />
+      <img src="images/logos/logo-10.png" alt="Cemig" />
+      <img src="images/logos/logo-11.png" alt="Granja Brasília" />
+      <img src="images/logos/logo-12.jpg" alt="Engelmig" />
+      <img src="images/logos/logo-13.jpeg" alt="Lapa Vermelha" />
+      <img src="images/logos/logo-14.jpg" alt="Pharlab" />
+      <img src="images/logos/logo-15.png" alt="Prumo" />
+      <img src="images/logos/logo-16.png" alt="Roca" />
+      <img src="images/logos/logo-17.jpg" alt="Rodonaves" />
+      <img src="images/logos/logo-18.png" alt="Raízen" />
+      <img src="images/logos/logo-19.jpg" alt="Sicoob" />
     </footer>
     <link rel="stylesheet" href="plugins/owl.carousel.min.css" />
     <script src="plugins/jquery.min.js"></script>
