Removendo botões do carousel de logos

--- a/engenharia.html
+++ b/engenharia.html
@@ -382,6 +382,7 @@
     <script>
       $("footer").owlCarousel({
         loop: true,
+        dots: false,
         autoplay: true,
         margin: 16,
         autoplayTimeout: 3000,
