--- a/execucao.html
+++ b/execucao.html
@@ -329,6 +329,7 @@
     <script>
       $("footer").owlCarousel({
         loop: true,
+        dots: false,
         autoplay: true,
         margin: 16,
         autoplayTimeout: 3000,
