--- a/execucao.html
+++ b/execucao.html
@@ -11,10 +11,6 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-    />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="plugins/owl.carousel.min.css" />
     <!-- Primary Meta Tags -->
@@ -140,7 +136,12 @@
                     <div class="col-md-auto col-xl text-start">
                       <a href="tel:+5537999881070" class="fs-6 text-gray-600">
                         <span class="me-1">(37) 99988-1070</span>
-                        <i class="bi bi-telephone text-primary"></i>
+                        <img
+                          src="icons/phone.svg"
+                          height="20"
+                          width="20"
+                          alt="Telefone"
+                        />
                       </a>
                     </div>
                     <div class="col-auto order-md-first">
@@ -197,7 +198,12 @@
                     class="fs-6 me-md-5 me-xl-0 text-gray-600"
                   >
                     <span class="me-1">(37) 99988-1070</span>
-                    <i class="bi bi-telephone text-primary"></i>
+                    <img
+                      src="icons/phone.svg"
+                      height="20"
+                      width="20"
+                      alt="Telefone"
+                    />
                   </a>
                 </div>
                 <div class="col-auto order-md-first">
@@ -251,7 +257,12 @@
                   class="text-gray-600 fs-6 me-md-5 me-xl-0"
                 >
                   <span class="me-1">(37) 99988-1070</span>
-                  <i class="bi bi-telephone text-primary"></i>
+                  <img
+                    src="icons/phone.svg"
+                    height="20"
+                    width="20"
+                    alt="Telefone"
+                  />
                 </a>
               </div>
               <div class="col-auto order-md-first">
@@ -291,8 +302,34 @@
             </address>
           </div>
           <div class="d-inline-flex align-items-center">
-            <i class="bi bi-whatsapp fs-3 me-3"></i>
-            <i class="bi bi-instagram fs-3"></i>
+            <a href="https://wa.me/5537999881070" class="me-2" target="_blank">
+              <img
+                src="icons/whatsapp.svg"
+                width="32"
+                height="32"
+                alt="Whatsapp"
+              />
+            </a>
+            <a
+              href="https://www.instagram.com/grupoorganizar/"
+              class="me-2"
+              target="_blank"
+            >
+              <img
+                src="icons/insta.svg"
+                width="32"
+                height="32"
+                alt="Instagram"
+              />
+            </a>
+            <a href="https://goo.gl/maps/2YBn3XLhFPnfomYe7" target="_blank">
+              <img
+                src="icons/location.svg"
+                alt="Localização"
+                width="32"
+                height="32"
+              />
+            </a>
           </div>
         </div>
         <hr style="margin: 2rem 0" />
