--- a/index.html
+++ b/index.html
@@ -44,24 +44,41 @@
             href="https://wa.me/5537999881070?text=Ol%C3%A1%21+Eu+gostaria+de+fazer+um+or%C3%A7amento"
             target="_blank"
           >
-            <img src="icons/whatsapp.svg" alt="Whatsapp" />
+            <img
+              src="icons/whatsapp.svg"
+              height="24"
+              width="24"
+              alt="Whatsapp"
+            />
           </a>
           <a href="https://www.instagram.com/grupoorganizar/" target="_blank">
-            <img src="icons/insta.svg" alt="Instagram" />
+            <img src="icons/insta.svg" height="24" width="24" alt="Instagram" />
           </a>
           <a href="https://goo.gl/maps/2YBn3XLhFPnfomYe7" target="_blank">
             <img
               src="icons/location.svg"
               alt="Localização"
-              style="height: calc(2.5rem - 2px)"
+              height="24"
+              width="24"
             />
           </a>
-          <a href="tel:+553734431075"
-            ><img
-              src="icons/phone.svg"
-              alt="Localização"
-              style="height: calc(2.5rem - 2px)"
-          /></a>
+          <a href="tel:+553734431075">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="none"
+              width="24"
+              height="24"
+              stroke="#fff"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path
+                d="M15.05 5A5 5 0 0 1 19 8.95M15.05 1A9 9 0 0 1 23 8.94m-1 7.98v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"
+              ></path>
+            </svg>
+          </a>
         </nav>
         <a
           href="https://parceiro.grupoorganizar.com.br/"
