--- a/execucao.html
+++ b/execucao.html
@@ -292,44 +292,52 @@
       </div>
     </section>
 
-    <section class="bg-gray-400 py-5">
+    <section class="footer-section bg-gray-400 py-5">
       <div class="container">
-        <div class="d-flex align-items-center justify-content-between">
-          <div>
-            <h1 class="mb-1 fw-bold text-4xl">Grupo Organizar</h1>
-            <address class="mb-0">
-              R. Francisco Soraggi, 15 - Santa Luzia, Formiga - MG
-            </address>
+        <div class="row gy-3 align-items-center">
+          <div class="col-sm">
+            <div>
+              <h1 class="mb-1 fw-bold text-4xl">Grupo Organizar</h1>
+              <address class="mb-0">
+                R. Francisco Soraggi, 15 - Santa Luzia, Formiga - MG
+              </address>
+            </div>
           </div>
-          <div class="d-inline-flex align-items-center">
-            <a href="https://wa.me/5537999881070" class="me-2" target="_blank">
-              <img
-                src="icons/whatsapp.svg"
-                width="32"
-                height="32"
-                alt="Whatsapp"
-              />
-            </a>
-            <a
-              href="https://www.instagram.com/grupoorganizar/"
-              class="me-2"
-              target="_blank"
-            >
-              <img
-                src="icons/insta.svg"
-                width="32"
-                height="32"
-                alt="Instagram"
-              />
-            </a>
-            <a href="https://goo.gl/maps/2YBn3XLhFPnfomYe7" target="_blank">
-              <img
-                src="icons/location.svg"
-                alt="Localização"
-                width="32"
-                height="32"
-              />
-            </a>
+          <div class="col-auto">
+            <div class="footer-social">
+              <a
+                href="https://wa.me/5537999881070"
+                class="me-2"
+                target="_blank"
+              >
+                <img
+                  src="icons/whatsapp.svg"
+                  width="32"
+                  height="32"
+                  alt="Whatsapp"
+                />
+              </a>
+              <a
+                href="https://www.instagram.com/grupoorganizar/"
+                class="me-2"
+                target="_blank"
+              >
+                <img
+                  src="icons/insta.svg"
+                  width="32"
+                  height="32"
+                  alt="Instagram"
+                />
+              </a>
+              <a href="https://goo.gl/maps/2YBn3XLhFPnfomYe7" target="_blank">
+                <img
+                  src="icons/location.svg"
+                  alt="Localização"
+                  width="32"
+                  height="32"
+                />
+              </a>
+            </div>
           </div>
         </div>
         <hr style="margin: 2rem 0" />
