Definindo link para loja virtual

--- a/index.html
+++ b/index.html
@@ -90,12 +90,14 @@
             data-color="hotpink"
             style="--overlay-color: #14a6df"
           >
-            <div class="image-wrapper">
-              <img
-                src="images/home/loja/img-1.webp"
-                alt="Visitar site de Loja Virtual"
-              />
-            </div>
+            <a href="https://organizarequipamentos.meucatalogodigital.com">
+              <div class="image-wrapper">
+                <img
+                  src="images/home/loja/img-1.webp"
+                  alt="Visitar site de Loja Virtual"
+                />
+              </div>
+            </a>
             <h2 class="title">Loja Virtual</h2>
             <h3 class="subtitle">Visitar</h3>
           </div>
