Adicionando razão social e CNPJ no rodapé

--- a/index.html
+++ b/index.html
@@ -161,27 +161,34 @@
         </div>
       </main>
     </section>
-    <footer class="owl-carousel">
-      <img src="images/logos/logo-1.webp" alt="Votorantim Cimentos" />
-      <img src="images/logos/logo-2.png" alt="Unical" />
-      <img src="images/logos/logo-3.png" alt="TMF" />
-      <img src="images/logos/logo-4.png" alt="Unimed" />
-      <img src="images/logos/logo-5.webp" alt="Vale D'ouro" />
-      <img src="images/logos/logo-6.png" alt="Amep" />
-      <img src="images/logos/logo-7.jpg" alt="Cal Oeste Ltda." />
-      <img src="images/logos/logo-8.png" alt="Dolocal" />
-      <img src="images/logos/logo-9.jpg" alt="Carmeuse" />
-      <img src="images/logos/logo-10.png" alt="Cemig" />
-      <img src="images/logos/logo-11.png" alt="Granja Brasília" />
-      <img src="images/logos/logo-12.jpg" alt="Engelmig" />
-      <img src="images/logos/logo-13.jpeg" alt="Lapa Vermelha" />
-      <img src="images/logos/logo-14.jpg" alt="Pharlab" />
-      <img src="images/logos/logo-15.png" alt="Prumo" />
-      <img src="images/logos/logo-16.png" alt="Roca" />
-      <img src="images/logos/logo-17.jpg" alt="Rodonaves" />
-      <img src="images/logos/logo-18.png" alt="Raízen" />
-      <img src="images/logos/logo-19.jpg" alt="Sicoob" />
+    <footer>
+      <div class="owl-carousel">
+        <img src="images/logos/logo-1.webp" alt="Votorantim Cimentos" />
+        <img src="images/logos/logo-2.png" alt="Unical" />
+        <img src="images/logos/logo-3.png" alt="TMF" />
+        <img src="images/logos/logo-4.png" alt="Unimed" />
+        <img src="images/logos/logo-5.webp" alt="Vale D'ouro" />
+        <img src="images/logos/logo-6.png" alt="Amep" />
+        <img src="images/logos/logo-7.jpg" alt="Cal Oeste Ltda." />
+        <img src="images/logos/logo-8.png" alt="Dolocal" />
+        <img src="images/logos/logo-9.jpg" alt="Carmeuse" />
+        <img src="images/logos/logo-10.png" alt="Cemig" />
+        <img src="images/logos/logo-11.png" alt="Granja Brasília" />
+        <img src="images/logos/logo-12.jpg" alt="Engelmig" />
+        <img src="images/logos/logo-13.jpeg" alt="Lapa Vermelha" />
+        <img src="images/logos/logo-14.jpg" alt="Pharlab" />
+        <img src="images/logos/logo-15.png" alt="Prumo" />
+        <img src="images/logos/logo-16.png" alt="Roca" />
+        <img src="images/logos/logo-17.jpg" alt="Rodonaves" />
+        <img src="images/logos/logo-18.png" alt="Raízen" />
+        <img src="images/logos/logo-19.jpg" alt="Sicoob" />
+      </div>
+      <p class="footer-copyright">
+        ORGANIZAR ENGENHARIA E CONSULTORIA LTDA <br />
+        <strong>20.131.551/0001-00</strong>
+      </p>
     </footer>
+
     <link rel="stylesheet" href="plugins/owl.carousel.min.css" />
     <script src="plugins/jquery.min.js"></script>
     <script src="plugins/owl.carousel.min.js"></script>
