Adicionando CNPJ e Razão social no rodapé das páginas internas

--- a/engenharia.html
+++ b/engenharia.html
@@ -347,7 +347,7 @@
 
     <section class="footer-section bg-gray-400 py-5">
       <div class="container">
-        <div class="row gy-3 align-items-center">
+        <div class="row gy-3 align-items-center mb-3">
           <div class="col-sm">
             <div>
               <h1 class="mb-1 fw-bold text-4xl">Grupo Organizar</h1>
@@ -393,7 +393,8 @@
             </div>
           </div>
         </div>
-        <hr style="margin: 2rem 0" />
+        <div>ORGANIZAR ENGENHARIA E CONSULTORIA LTDA 20.131.551/0001-00</div>
+        <hr style="margin: 0.5rem 0 2rem" />
         <footer class="owl-carousel bg-gray-400">
           <img src="images/logos/logo-1.webp" alt="Votorantim Cimentos" />
           <img src="images/logos/logo-2.png" alt="Unical" />
