Sobre da página

--- a/index.html
+++ b/index.html
@@ -183,10 +183,20 @@
         <img src="images/logos/logo-18.png" alt="Raízen" />
         <img src="images/logos/logo-19.jpg" alt="Sicoob" />
       </div>
-      <p class="footer-copyright">
-        ORGANIZAR ENGENHARIA E CONSULTORIA LTDA <br />
-        <strong>20.131.551/0001-00</strong>
-      </p>
+      <div class="footer-copyright">
+        <div>
+          <h1>GRUPO ORGANIZAR</h1>
+          Empresa especializada nas áreas de segurança do trabalho, meio
+          ambiente, prevenção e combate <br />à incêndios e venda de
+          equipamentos de segurança. Atuando há mais de uma década no
+          <br />desenvolvimento de soluções para a promoção da segurança e
+          conforto nos ambientes de trabalho.
+        </div>
+        <div>
+          ORGANIZAR ENGENHARIA E CONSULTORIA LTDA <br class="keep" />
+          <strong>20.131.551/0001-00</strong>
+        </div>
+      </div>
     </footer>
 
     <link rel="stylesheet" href="plugins/owl.carousel.min.css" />
