Inserindo sobre nas páginas internas

--- a/engenharia.html
+++ b/engenharia.html
@@ -393,7 +393,16 @@
             </div>
           </div>
         </div>
-        <div>ORGANIZAR ENGENHARIA E CONSULTORIA LTDA 20.131.551/0001-00</div>
+        <div>
+          <p>
+            Empresa especializada nas áreas de segurança do trabalho, meio
+            ambiente, prevenção e combate à incêndios e venda de equipamentos de
+            segurança. Atuando há mais de uma década no desenvolvimento de
+            soluções para a promoção da segurança e conforto nos ambientes de
+            trabalho.
+          </p>
+          ORGANIZAR ENGENHARIA E CONSULTORIA LTDA 20.131.551/0001-00
+        </div>
         <hr style="margin: 0.5rem 0 2rem" />
         <footer class="owl-carousel bg-gray-400">
           <img src="images/logos/logo-1.webp" alt="Votorantim Cimentos" />
