Ajustando responsividade e formatação do conteúdo da página

--- a/index.html
+++ b/index.html
@@ -77,16 +77,19 @@
           ><span>Seja um parceiro</span></a
         >
       </header>
-      <div style="margin-bottom: 1rem">
-        <h1>GRUPO ORGANIZAR</h1>
+      <div class="page-content">
         <img src="images/logo.png" alt="Organizar Engenharia" class="logo" />
-        Empresa especializada nas áreas de segurança do trabalho, meio ambiente,
-        <br />
-        prevenção e combate à incêndios e venda de equipamentos de segurança.
-        <br />
-        Atuando há mais de uma década no desenvolvimento de soluções para a
-        <br />
-        promoção da segurança e conforto nos ambientes de trabalho.
+        <h1>GRUPO ORGANIZAR</h1>
+        <p>
+          Empresa especializada nas áreas de segurança do trabalho, meio
+          ambiente,
+          <br />
+          prevenção e combate à incêndios e venda de equipamentos de segurança.
+          <br />
+          Atuando há mais de uma década no desenvolvimento de soluções para a
+          <br />
+          promoção da segurança e conforto nos ambientes de trabalho.
+        </p>
       </div>
       <main>
         <h1 class="promo-title">Engenharia</h1>
